@@ -1,11 +1,18 @@
 package com.log.ui;
 
 import com.log.core.AppState;
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
+import javafx.fxml.FXMLLoader;
 import javafx.geometry.Pos;
+import javafx.scene.Parent;
+import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
+import javafx.stage.Modality;
+import javafx.stage.Stage;
 
 import java.util.Optional;
 
@@ -16,30 +23,47 @@ public class AddPropertiesPopupController {
 
     private final AppState appState = AppState.getInstance();
 
-    // ===== INITIALIZATION =====
-    @FXML
-    public void initialize() {
 
-        // Example preloaded attributes (remove later)
-        addAttributeCard("Density");
-        addAttributeCard("Open porosity");
+    // 🔥 ADDED: store entered category
+    private String enteredCategory;
+
+    // 🔥 ADDED: getter for parent controller
+    public String getEnteredCategory() {
+        return enteredCategory;
+    }
+
+    private ObservableList<String> attributesList = FXCollections.observableArrayList();
+    public ObservableList<String> getAttributesList() {
+        return attributesList;
     }
 
     // ===== NEW ATTRIBUTE BUTTON =====
     @FXML
     private void handleNewAttribute() {
+        try {
+            FXMLLoader loader = new FXMLLoader(
+                    getClass().getResource("/com/log/ui/views/attributesPopup.fxml")
+            );
 
-        TextInputDialog dialog = new TextInputDialog();
-        dialog.setTitle("New Attribute");
-        dialog.setHeaderText("Enter Attribute Name");
+            Parent root = loader.load();
 
-        Optional<String> result = dialog.showAndWait();
+            Stage stage = new Stage();
+            stage.setTitle("Add Attribute");
+            stage.setScene(new Scene(root));
+            stage.initModality(Modality.APPLICATION_MODAL);
+            stage.showAndWait();
 
-        result.ifPresent(name -> {
-            if (!name.trim().isEmpty()) {
-                addAttributeCard(name.trim());
+            AddAttributesPopupController controller = loader.getController();
+            String attributeName = controller.getAttributeName();
+
+            if (attributeName != null && !attributeName.isBlank()) {
+                addAttributeCard(attributeName);
             }
-        });
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
     }
 
     // ===== SAVE PROPERTY =====
@@ -55,10 +79,15 @@ public class AddPropertiesPopupController {
 
         System.out.println("Saving Property: " + propertyName);
 
-        // Example: Save to AppState (adapt to your model later)
-        appState.getCategories().add(propertyName);
+        // 🔥 STORE VALUE FOR PARENT
+        enteredCategory = propertyName;
+
 
         showAlert("Success", "Property saved successfully!");
+
+        // 🔥 CLOSE POPUP
+        Stage stage = (Stage) propertyNameField.getScene().getWindow();
+        stage.close();
     }
 
     // ===== ATTRIBUTE CARD CREATION =====
@@ -75,7 +104,7 @@ public class AddPropertiesPopupController {
         Button editBtn = new Button("✎");
         editBtn.getStyleClass().add("icon-btn");
 
-        Button deleteBtn = new Button("⋯");
+        Button deleteBtn = new Button("⌫");
         deleteBtn.getStyleClass().add("icon-btn");
 
         // ===== EDIT ACTION =====
@@ -95,9 +124,15 @@ public class AddPropertiesPopupController {
         });
 
         // ===== DELETE ACTION =====
-        deleteBtn.setOnAction(e -> attributesContainer.getChildren().remove(card));
+        deleteBtn.setOnAction(e -> {
+            attributesContainer.getChildren().remove(card);
+            attributesList.remove(label.getText());
+        });
+
 
         card.getChildren().addAll(label, editBtn, deleteBtn);
+
+        attributesList.add(attributeName);
 
         attributesContainer.getChildren().add(
                 attributesContainer.getChildren().size() - 1,
